--- a/build.xml
+++ b/build.xml
@@ -1,71 +1,92 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
 <project name="Practica3" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Practica3.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
+    <description>Build, tests, and runs the project Practica3.</description>
+    
+    <property name="tomcat.home" value="C:\Program Files\Apache Software Foundation\Apache Tomcat 7.0.41" />
+    <property name="app.name" value="Practica3" />
+    <property name="context.path" value="/${app.name}"/>
+    <property name="src.home" value="${basedir}/src"/>
+    <property name="web.home" value="${basedir}/web"/>
+    <property name="conf.home" value="${basedir}/conf"/>
+    <property name="lib.home" value="${basedir}/lib"/>
+    <property name="docs.home" value="${basedir}/docs"/>
+    <property name="build.home" value="${basedir}/build"/>
+    <property name="dist.home" value="${basedir}/dist"/>
+    <property name="war.file" value="${dist.home}/${app.name}.war"/>
+     
+    <property name="tomcat.manager.url" value="http://localhost:8084/manager"/>
+    <property name="tomcat.username" value="tomcat"/>
+    <property name="tomcat.password" value="tomcat"/>
+    
+    <!-- Borra las carpetas que genera este script -->
+    <target name="clean" description="Borra todo lo generado por el script">
+        <delete dir="${build.home}"/>
+        <delete dir="${dist.home}"/>
+        <delete dir="${docs.home}"/>
+    </target>
+    
+    
+    
+    <target name="init">
+        <mkdir dir="${build.home}"/><!-- Crea las carpetas build, docs y dist -->
+        <mkdir dir="${docs.home}"/>
+        <mkdir dir="${dist.home}"/>
+        <path id="classpath">
+            <fileset dir="${lib.home}">
+                <include name="*.jar"/>
+            </fileset>
+             
+            <fileset dir="${tomcat.home}/lib">
+                <include name="servlet-api.jar"/>
+            </fileset>
+        </path>
+        <property name="classpath" refid="classpath"/>
+    </target>
 
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
+    <target name="compile" depends="init">
+        <echo message="Classpath set to ${classpath}"/>
+        <javac srcdir="${src.home}" destdir="${build.home}" debug="true" classpath="${classpath}" deprecation="true" includeantruntime="false"></javac>
+  
+        <copy todir="${build.home}">
+            <fileset dir="${conf.home}"/>
+        </copy>
+    </target>
+    
+        <!-- Ejecutar este para compilar -->
+    <target name="dist" depends="compile" description="Creates the deployable WAR file">
+        <war destfile="${war.file}" webxml="${web.home}/WEB-INF/web.xml">
+            <fileset dir="${web.home}" excludes="**/web.xml" />
+            <lib dir="${lib.home}"/>
+            <classes dir="${build.home}"/>
+        </war>
+    </target>
+    
+    <!--===============================\\ NO FUNCIONA //=====================================-->
+    
+    <path id="deployer.classpath">
+        <fileset dir="${tomcat.home}/lib">
+            <include name="*.jar"/>
+        </fileset>
+    </path>
+    
+    <target name="stop" description="Stop web application">
+        <stop url="${tomcat.manager.url}" username="${tomcat.username}" password="${tomcat.password}" path="${context.path}"/>
+    </target>
+    
+    <target name="undeploy" description="Undeploy web application">
+        <undeploy url="${tomcat.manager.url}" username="${tomcat.username}" password="${tomcat.password}" path="${context.path}"/>
+    </target>
+    
+    <target name="deploy" depends="dist" description="Deploy web application">
+        <deploy url="${tomcat.manager.url}/${context.path}" username="${tomcat.username}" password="${tomcat.password}" path="${context.path}" war="${dist.home}/${war.file}" update="true" />
+    </target>
+   
+    <target name="start" description="Start web application">
+        <start url="${tomcat.manager.url}" username="${tomcat.username}" password="${tomcat.password}" path="${context.path}"/>
+    </target>
 
-      -pre-init:                 called before initialization of project properties 
-      -post-init:                called after initialization of project properties 
-      -pre-compile:              called before javac compilation 
-      -post-compile:             called after javac compilation 
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-dist:                 called before archive building 
-      -post-dist:                called after archive building 
-      -post-clean:               called after cleaning build products 
-      -pre-run-deploy:           called before deploying
-      -post-run-deploy:          called after deploying
-
-    Example of pluging an obfuscator after the compilation could look like 
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Other way how to customize the build is by overriding existing main targets.
-    The target of interest are: 
-
-      init-macrodef-javac:    defines macro for javac compilation
-      init-macrodef-junit:   defines macro for junit execution
-      init-macrodef-debug:    defines macro for class debugging
-      do-dist:                archive building
-      run:                    execution of project 
-      javadoc-build:          javadoc generation 
-
-    Example of overriding the target for project execution could look like 
-
-        <target name="run" depends="<PROJNAME>-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that overridden target depends on jar target and not only on 
-    compile target as regular run target does. Again, for list of available 
-    properties which you can use check the target you are overriding in 
-    nbproject/build-impl.xml file. 
-
-    -->
+    <target name="reload" description="Reload web application">
+        <reload url="${tomcat.manager.url}" username="${tomcat.username}" password="${tomcat.password}" path="${context.path}"/>
+    </target>
+    
 </project>
